- Made gui reactive
- Removed content from front boxes

- Added onclick to boxes

- Handling system exit error on eel.start

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,9 @@ __pycache__/
 #ignore logs
 *.log
 
-#dynamicaly generated
+#dynamicaly generated posters
 web/images/posters/
+
+#build files
+build/
+dist/
